@@ -1604,7 +1604,9 @@ an input event arrives.  The other arguments are passed to `tramp-error'."
 	(when (and buf
 		   tramp-message-show-message
 		   (not (zerop tramp-verbose))
-		   (not (tramp-completion-mode-p)))
+		   (not (tramp-completion-mode-p))
+		   ;; Show only when Emacs has started already.
+		   (current-message))
 	  (let ((enable-recursive-minibuffers t))
 	    ;; `tramp-error' does not show messages.  So we must do it
 	    ;; ourselves.
