@@ -1,3 +1,13 @@
+2014-11-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-error-with-buffer): Show connection buffer
+	only when message appeared in minibuffer.  (Bug#18891)
+
+	* net/tramp-adb.el (tramp-adb-handle-file-attributes):
+	* net/tramp-gvfs.el (tramp-gvfs-handle-file-attributes):
+	* net/tramp-sh.el (tramp-sh-handle-file-attributes): Return nil in
+	case of errors.
+
 2014-11-04  Eli Zaretskii  <eliz@gnu.org>
 
 	* jit-lock.el (jit-lock-stealth-fontify): Be tolerant to nil being
